k8s/spack/spackbot-spack-io/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spackbot-spack-io
  namespace: spack
  labels:
    app: spackbot-spack-io
    svc: web
spec:
  selector:
    matchLabels:
      app: spackbot-spack-io
      svc: web
  replicas: 2
  template:
    metadata:
      labels:
        app: spackbot-spack-io
        svc: web
    spec:
      containers:
      - name: web
        image: "ghcr.io/spack/spack-bot:e3405654bb"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
      nodeSelector:
        spack.io/node-pool: base
