k8s/spack/spackbot-spack-io/staging-config-map.yaml
# NOTE(opadron): to test:
#
#  ./scripts/gitops-patch.py -e STAGING -p 1 \
#      ./k8s/spack/spackbot-spack-io/deployments.yaml \
#      ./k8s/spack/spackbot-spack-io/staging-config-map.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: spackbot-deployment-test
  namespace: spack
  annotations:
    cd.spack.io/staged-resource: "1"
data:
  apiVersion: apps/v1
  kind: Deployment
  name: spackbot-spack-io
  patch: |
    [...]
